--- a/resume-generator-app/package.json
+++ b/resume-generator-app/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "@vercel/analytics": "^0.1.8",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
     "openai": "^3.1.0",
